RG-2346: Fixed. Editable heading incorrectly wraps phrases with no spaces [publish]

--- a/src/editable-heading/editable-heading.css
+++ b/src/editable-heading/editable-heading.css
@@ -68,12 +68,14 @@
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
 
-  word-wrap: break-word;
+  word-break: break-all;
 
   border-radius: var(--ring-border-radius);
 
   .multiline & {
     -webkit-line-clamp: 3;
+
+    word-break: break-word;
   }
 }
 
